sanger/sites/scmap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scmap
  labels:
    app: scmap
spec:
  type: NodePort
  ports:
  - port: 9000
    targetPort: scmap
  selector:
    app: scmap
